# sandbox3d-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/: CMakeLists.txt  shaders.qrc
resources/shaders/: bbox.frag  bbox.geom  bbox.vert  pickbuffer.frag  pickbuffer.vert  simple.vert
resources/ui/: AboutDialog.ui  MainWindow.ui  NodeEditorWindow.ui
scripts/: deploy_shaders.sh
shaders/: simple.frag
src/: CMakeLists.txt  DrawableSurface.cpp  DrawableSurface.h  MainWindow.cpp  MainWindow.h  NodeEditorWindow.cpp  NodeEditorWindow.h  NodeTextureCreationWindow.cpp  QOpenGLResourceManager.cpp  QOpenGLResourceManager.h  SerializeGraph.cpp  SerializeGraph.h  main.cpp
src/Camera/: Camera.cpp
src/Graph/: CMakeLists.txt  Graph.cpp  Graph.h  MetaDataContainer.cpp  MetaDataContainer.h
src/GraphWidget/: CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.h  Connector.cpp  Connector.h  ConnectorInput.cpp  ConnectorInput.h  ConnectorOutput.cpp  ConnectorOutput.h  Edge.cpp  Edge.h  Node.cpp  Node.h  NodeComparison.cpp  NodeComparison.h  NodeFinal.cpp  NodeFinal.h  NodeFloat.cpp  NodeFloat.h  NodeOperator.cpp  NodeOperator.h  NodeOperatorOneParam.cpp  NodeOperatorOneParam.h  NodeOperatorTwoParams.cpp  NodeOperatorTwoParams.h  NodePass.cpp  NodePass.h  NodeTexture.cpp  NodeTexture.h  View.cpp  View.h
src/app/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  DrawableSurface.cpp  DrawableSurface.h  MainWindow.cpp  MainWindow.h  NodeDescription.cpp  NodeDescription.h  NodeEditorWindow.cpp  NodeEditorWindow.h  NodeOperationCreationWindow.cpp  QOpenGLResourceManager.cpp  QOpenGLResourceManager.h  RendererWrapper.cpp  RendererWrapper.h  SerializeGraph.cpp  SerializeGraph.h  main.cpp
src/app/Camera/: Camera.cpp
ui/: MainWindow.ui
